--- a/05_CSS_Selectors/app.css
+++ b/05_CSS_Selectors/app.css
@@ -116,3 +116,8 @@ p::first-line {
 p::selection {
     background-color: yellow;
 }
+
+button:hover {
+    background-color: olive;
+    font-size: 10px;
+}
